2014-05-16  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c:
	* src/gstttmlattribute.h:
	* src/gstttmlstate.c:
	* src/gstttmlstate.h:
	* src/gstttmlrender.c:
	Deal with zIndex collisions and the AUTO value.

2014-05-16  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlstate.c: (gst_ttml_state_push_attribute):
	Fix region background color state handling.

2014-05-16  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_show_regions):
	Set default text color (which is implementation dependent) to the inverse
	of the region background color, as the spec suggests.

2014-05-16  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_parse):
	Fix parsing of AUTO extent attribute.

2014-05-15  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_new_region):
	Fix crash when zIndex is not defined.

2014-05-15  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlbase.c: (gst_ttmlbase_push_attr):
	* src/gstttmlstate.c: (gst_ttml_state_push_attribute):
	Fix backgroundColor when applied to regions from a style.

2014-05-15  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_parse),
	(gst_ttml_attribute_new_styling_default):
	* src/gstttmlenums.h:
	* src/gstttmlrender.c: (gst_ttmlrender_region_compare_zindex),
	(gst_ttmlrender_new_region):
	* src/gstttmlutils.c:
	Support zIndex attribute, so regions can be put on top of one another.

2014-05-15  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlutils.c:
	Fix parsing of lineThrough decoration attribute (Animation013.xml)
	(This was a regression from ttmlparse)

2014-05-15  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlutils.c: (gst_ttml_utils_enum_parse_func):
	Fix parsing of attributes with trailing whitespace (Animation006.xml)
	(This was a regression from ttmlparse)

2014-05-15  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlrender.c: (gst_ttmlrender_build_layouts):